src/test/ui/issue-18183.stderr
error[E0128]: type and const parameters with a default cannot use forward declared identifiers
  --> $DIR/issue-18183.rs:11:20
   |
11 | pub struct Foo<Bar=Bar>(Bar); //~ ERROR E0128
   |                    ^^^ defaulted type and const parameters cannot be forward declared

error: aborting due to previous error

